improve readability of links

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <h2 style='font-weight: lighter; font-size: 1.75rem;'>Documentation</h2>
                         <p>
                             For in-depth details and examples on using TESjs, check out the 
-                            <a href='https://github.com/mitchwadair/tesjs/tree/main/doc' style='color: var(--primary)' target='_blank' rel='noopener noreferrer' title='TESjs on GitHub'>documentation</a>
+                            <a href='https://github.com/mitchwadair/tesjs/tree/main/doc' target='_blank' rel='noopener noreferrer' title='TESjs on GitHub'>documentation</a>
                              on GitHub.  There you can learn about all of the features available to you in TESjs and get direct references to supplemental documentation from Twitch.
                         </p>
                     </div>
@@ -198,9 +198,9 @@ tes.on('revocation', subscriptionData => {
                     <h2 style='font-weight: lighter; font-size: 1.75rem;'>Support the Project</h2>
                     <p>
                         If you would like to support the development and maintenance of TESjs, please consider supporting the project through 
-                        <a href='https://github.com/sponsors/mitchwadair' target='_blank' rel='noopener noreferrer' title='GitHub Sponsors' style='color: var(--primary)'>GitHub Sponsors</a> 
+                        <a href='https://github.com/sponsors/mitchwadair' target='_blank' rel='noopener noreferrer' title='GitHub Sponsors'>GitHub Sponsors</a> 
                         or through a one-time 
-                        <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=9WS3KJPAV8JDJ&currency_code=USD' target='_blank' rel='noopener noreferrer' title='PayPal Donation' style='color: var(--primary)'>PayPal donation</a>
+                        <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=9WS3KJPAV8JDJ&currency_code=USD' target='_blank' rel='noopener noreferrer' title='PayPal Donation'>PayPal donation</a>
                         .  Donations are not required but are much appreciated and will directly support efforts to continue developing TESjs.
                     </p>
                     <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=9WS3KJPAV8JDJ&currency_code=USD' target='_blank' rel='noopener noreferrer' title='PayPal Donation' style='text-decoration: none;'>
