add version warning, fix some styles

--- a/index.html
+++ b/index.html
@@ -86,7 +86,12 @@
                         </div>
                     </div>
                 </div>
-                <div class='tes-blurb'>
+                <div class="version-alert">
+                    <div class="mdi mdi-alert-outline alert-icon"></div>
+                    <div class="alert-title">Warning</div>
+                    <div class="alert-text">If you are using a version of TESjs lower than v0.5.0 it is <i>HIGHLY</i> recommended that you upgrade to at least v0.5.0</div>
+                </div>
+                <div class='tes-blurb' style="border-top: 1px solid var(--bg-primary)">
                     <div class='tes-tile'>
                         <h2>Skip the Hard Stuff</h2>
                         <p>
