update alert to include link to issue

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
                     <div class="mdi mdi-alert-outline alert-icon"></div>
                     <div class="alert-title">Warning</div>
                     <div class="alert-text">If you are using a version of TESjs lower than v0.5.0 it is <i>HIGHLY</i> recommended that you upgrade to at least v0.5.0</div>
+                    <div class="alert-text">
+                        For more information on this, please see <a href='https://github.com/mitchwadair/tesjs/issues/34' target='_blank' rel='noopener noreferrer' title='TESjs on GitHub'>this issue</a>
+                    </div>
                 </div>
                 <div class='tes-blurb' style="border-top: 1px solid var(--bg-primary)">
                     <div class='tes-tile'>
