update paypal link

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ const tes = new TES({
                         >
                         or through a one-time
                         <a
-                            href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=9WS3KJPAV8JDJ&currency_code=USD"
+                            href="https://paypal.me/mitchwadair"
                             target="_blank"
                             rel="noopener noreferrer"
                             title="PayPal Donation"
@@ -331,7 +331,7 @@ const tes = new TES({
                         continue developing TESjs.
                     </p>
                     <a
-                        href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=9WS3KJPAV8JDJ&currency_code=USD"
+                        href="https://paypal.me/mitchwadair"
                         target="_blank"
                         rel="noopener noreferrer"
                         title="PayPal Donation"
