fix copy, code theme

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             }
 
             .hljs-keyword {
-                color: #855cad;
+                color: #6c61d1;
             }
 
             .hljs-built_in {
@@ -168,7 +168,7 @@
                         <p>
                             Already running an Express server in your app? TESjs has you covered! TESjs seamlessly
                             integrates with your existing Express application, enabling you to quickly add EventSub
-                            functionality without any additional setup. Just pass your Express ap into the TESjs config
+                            functionality without any additional setup. Just pass your Express app into the TESjs config
                             and you're already done.
                         </p>
                     </div>
